<resources>
    <string name="app_name">xolis</string>
    <string name="server_url" translatable="false">http://192.168.1.132:8080</string>
    <string name="section_wishes">Wishes</string>
    <string name="section_map">Map</string>
    <string name="section_offerings">Offerings</string>
    <string name="create_wish_title">Make a wish</string>
    <string name="create_wish_name_hint">Write your wish…</string>
    <string name="create_wish_save">Save</string>
    <string name="auth_title">Authentication</string>
    <string name="section_login">Login</string>
    <string name="section_register">Register</string>
    <string name="register_username_hint">Choose your username</string>
    <string name="register_password_hint">Type your new password (4 to 16 characters)</string>
    <string name="register_confirm_password_hint">Repeat password</string>
    <string name="register_save">Register as user</string>
    <string name="register_username_invalid"><![CDATA[Allowed only simple characters, numbers & underscore]]></string>
    <string name="register_username_already_used">This username is used by another user</string>
    <string name="register_email_already_used">This email is used by another user</string>
    <string name="login_username_hint">Your username or your email address</string>
    <string name="login_password_hint">Your password</string>
    <string name="login_save">Login</string>
    <string name="login_password_incorrect">Incorrect password</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="register_email_hint">Indicate your email address</string>
    <string name="register_confirm_email_hint">Repeat your email address</string>
    <string name="login_username_not_found">Username or email not found</string>
    <string name="user_profile">User registered</string>
    <string name="username">\@%1$s</string>
</resources>
