<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_wishes">

    <fragment
        android:id="@+id/navigation_wishes"
        android:name="cat.aubricoc.xolis.ui.wishes.WishListFragment"
        android:label="@string/section_wishes"
        tools:layout="@layout/fragment_wish_list" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="cat.aubricoc.xolis.ui.map.MapFragment"
        android:label="@string/section_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_offerings"
        android:name="cat.aubricoc.xolis.ui.offerings.OfferingsFragment"
        android:label="@string/section_offerings"
        tools:layout="@layout/fragment_offerings" />
</navigation>
